opam-version: "1.2"
maintainer: "opensource@janestreet.com"
authors: ["Jane Street Group, LLC <opensource@janestreet.com>"]
homepage: "https://github.com/janestreet/csvfields"
bug-reports: "https://github.com/janestreet/csvfields/issues"
dev-repo: "https://github.com/janestreet/csvfields.git"
license: "Apache-2.0"
build: [
  ["jbuilder" "build" "--only-packages" "csvfields" "--root" "." "-j" jobs "@install"]
]
depends: [
  "core"
  "jbuilder"                {build & >= "1.0+beta2"}
  "ppx_driver"
  "ppx_jane"
  "sexplib"
  "ocaml-migrate-parsetree" {>= "0.4"}
]
available: [ ocaml-version >= "4.03.0" ]
descr: "
Runtime support for ppx_xml_conv and ppx_csv_conv
"
