opam-version: "2.0"
maintainer: "Jane Street developers"
authors: ["Jane Street Group, LLC"]
homepage: "https://github.com/janestreet/csvfields"
bug-reports: "https://github.com/janestreet/csvfields/issues"
dev-repo: "git+https://github.com/janestreet/csvfields.git"
doc: "https://ocaml.janestreet.com/ocaml-core/latest/doc/csvfields/index.html"
license: "MIT"
build: [
  ["dune" "build" "-p" name "-j" jobs]
]
depends: [
  "ocaml" {>= "5.1.0"}
  "core"
  "ppx_jane"
  "sexplib"
  "dune"     {>= "3.17.0"}
  "num"
]
available: arch != "arm32" & arch != "x86_32"
synopsis: "Runtime support for ppx_xml_conv and ppx_csv_conv_deprecated"
description: "
"
